--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
         background-color: #333;
         font-family: Courier New;
         color: #EEE;
+        margin:0;
+        padding:0;
+        
       }
       #container {
-        margin-left: auto;
-        margin-right: auto;
-        height: 100%;
+        height: 100vh;
+        width: 100vw;
+        margin:0;
+        padding:0;
       }
       #timerText {
-        font-size: 20em;
+        font-size: 20vh;
         position: absolute;
         left: 50%;
         top: 50%;
@@ -20,13 +24,13 @@
         margin: 0;
       }
       #pauseText {
-        font-size: 10em;
+        font-size: 10vh;
         position: absolute;
       }
       #bar {
         width: 100%;
         background-color: #EEE;
-        height: 2em;
+        height: 5vh;
         margin: 0;
         position: absolute;
         bottom: 0;
