Okay I think everything should be fixed now. Looks like I got my JS and Python mixed up, but for some reason there was a discrepancy between how my machine was running the code versus the server.

--- a/help.html
+++ b/help.html
@@ -96,7 +96,7 @@
   </body>
   <script>
     for (example of document.getElementsByClassName("example")){
-      example.innerHTML = example.innerHTML.replace("window.location.hostname"+"/simple-timer/", window.location.hostname);
+      example.innerHTML = example.innerHTML.replace("window.location.hostname", "https://"+window.location.hostname+"/simple-timer/");
     }
   </script>
 </html>
