Added error messages, message display function, and updated hidehelp to reflect how I want booleans to work, where their presence indicates true, and the lack of it indicates false.

--- a/help.html
+++ b/help.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Simple Timer</title>
     <style>
       body {
         background-color: #333;
@@ -87,7 +88,7 @@
           <td>Hide Help</td>
           <td>hidehelp</td>
           <td>Whether the help link in the top corner should be hidden.</td>
-          <td>Either hidehelp=true or hidehelp=false.</td>
+          <td>The presence of the hidehelp parameter in the url sets it to true, otherwise it is false.</td>
           <td>false</td>
         </tr>
       </table>
