--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
     <style>
       body {
         background-color: #333;
-        font-family: Courier New;
+        font-family: Arial;
         color: #EEE;
         margin-top: 10vh;
         margin-bottom: 10vh;
@@ -50,10 +50,10 @@
       <p> That means that one of the parameters was wrong (or that my code broke, sorry).</p>
       <p> This timer works via URL parameters, so they can just be clicked on and start running immediately, without much else being necessary.</p>
       <p> For example, here's one that's set for <a href="./?t=90">90 seconds.</a></p>
-      <p class="example"> The URL for that is window.location.hostname/?t=90</p>
+      <p class="example"> The URL for that is window.location.hostname?t=90</p>
       <p>You can also style the foreground and background colours with <a href="https://en.wikipedia.org/wiki/Web_colors#Basic_colors">hex codes!</a></p>
       <p>For example, here's another <a href="./?t=90&bg=FFF&c=F00">90 second timer</a>, this time with a <span class="white">white background</span> and a <span class="red">red foreground.</span></p>
-      <p class="example"> The url for that one is window.location.hostname/?t=90&bg=FFF&c=F00 </p>
+      <p class="example"> The url for that one is window.location.hostname?t=90&bg=FFF&c=F00 </p>
       <p> Below is a table of all the options currently available, with a list of what they do.</p>
       <table>
         <tr>
